--- a/2d/index.html
+++ b/2d/index.html
@@ -23,7 +23,7 @@
   <script src="js/libs/jquery.min.js"></script>  
   <script type="text/javascript" src="js/libs/jquery-ui.min.js"></script>
 
-  <script src="socket.io/socket.io.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="js/libs/jquery.jwNotify.js"></script>
   <script src="js/libs/jquery.favicon.js"></script>
   <script src="js/libs/underscore-min.js"></script>
